# buzzline

./: README.md  pyproject.toml
app/: settings.py  urls.py
order/: factories.py  models.py  serializers.py  urls.py  views.py
order/migrations/: 0001_initial.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewset/: test_order_viewset.py
product/: factories.py  models.py  serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewset/: test_category_viewset.py  test_product_viewset.py
